[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oncdw"
version = "0.0.1"
dependencies = [
    "streamlit",
    "plotly",
    "onc"
]

requires-python = ">= 3.10"

[project.optional-dependencies]
dev = [
    "ipykernel",
    "tox",
    "black",
    "isort",
    "ruff",
]